syntax="proto3";

package order;


option go_package = "github.com/ecom/packages/proto/order";

service OrderService {
    rpc GetOrder(GetOrderReq) returns (OrderRes);
    rpc GetAllOrders (Empty )returns (AllOrderRes);
    rpc CreateOrder(CreateOrderReq) returns (OrderRes);
    rpc UpdateOrderStatus(UpdateOrderStatusReq) returns (UpdateOrderStatusRes);
}

message GetOrderReq {
    string id = 1;

}

message OrderRes {
    string id = 1;
    string userId = 2;
    repeated OrderItem items = 3;
    string orderStatus = 4;
    double total = 5;
    string clientSecret = 6;
}

message AllOrderRes {
    repeated OrderRes orders = 1;
}

message Empty {

}

message CreateOrderReq {
    repeated OrderItem items =1;
    string userId = 2;
}

message OrderItem {
    string id = 1;
    string productId = 2;
    string orderId = 3;
    int32 quantity = 4;
    double price = 5;
}

message UpdateOrderStatusReq {
    string orderId = 1;
    string status = 2;
}

message UpdateOrderStatusRes {
    string message = 1;
}
